# nonogram-app

./: .gitignore  LICENSE  NONOGRAM_APP_SKILL.md  PROGRESS.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/nonogram/api/: main.py  schemas.py
src/nonogram/api/routers/: generator_router.py  solver_router.py
src/nonogram/core/: exceptions.py  grid.py
src/nonogram/difficulty/: evaluator.py
src/nonogram/generator/: pattern_source.py  puzzle_generator.py
src/nonogram/image_recognition/: interface.py
src/nonogram/solver/: engine.py  line_solver.py  uniqueness.py
tests/fixtures/: known_puzzles.py
tests/integration/: test_api.py  test_generate_and_evaluate.py  test_solver_pipeline.py
tests/unit/: test_engine.py  test_evaluator.py  test_grid.py  test_image_recognition.py  test_line_solver.py  test_pattern_source.py  test_puzzle_generator.py  test_scaffolding.py  test_uniqueness.py
